[metadata]
name = egi-hub-addons
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
summary = onedata + EGI Notebooks 
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    egi_hub_addons
